--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-BDENV/
-
+venv/
+requirements.txt
 ### Django ###
 *.log
 *.pot
@@ -17,7 +17,7 @@ local_settings.py
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
+.vscode
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
