--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,32 @@
 asgiref==3.2.10
 autopep8==1.5.4
+backcall==0.2.0
+colorama==0.4.3
+decorator==4.4.2
 Django==3.0.8
+django-extensions==3.0.4
+ipykernel==5.3.4
+ipython==7.17.0
+ipython-genutils==0.2.0
+jedi==0.17.2
+jupyter-client==6.1.6
+jupyter-core==4.6.3
+parso==0.7.1
+pickleshare==0.7.5
 Pillow==7.2.0
+prompt-toolkit==3.0.5
 psycopg2==2.8.5
 pycodestyle==2.6.0
+pydotplus==2.0.2
+Pygments==2.6.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.1
+pywin32==228
+pyzmq==19.0.2
+six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+tornado==6.0.4
+traitlets==4.3.3
+wcwidth==0.2.5
