--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ backcall==0.2.0
 colorama==0.4.3
 decorator==4.4.2
 Django==3.0.8
+django-crispy-forms==1.9.2
 django-extensions==3.0.4
+django-widget-tweaks==1.4.8
 ipykernel==5.3.4
 ipython==7.17.0
 ipython-genutils==0.2.0
@@ -12,17 +14,18 @@ jedi==0.17.2
 jupyter-client==6.1.6
 jupyter-core==4.6.3
 parso==0.7.1
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
 prompt-toolkit==3.0.5
 psycopg2==2.8.5
+ptyprocess==0.6.0
 pycodestyle==2.6.0
 pydotplus==2.0.2
 Pygments==2.6.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
-pywin32==228
 pyzmq==19.0.2
 six==1.15.0
 sqlparse==0.3.1
