--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.8
 django-3-jet==1.0.7
 django-crispy-forms==1.9.2
 django-extensions==3.0.4
+django-gravatar2==1.4.4
 django-jalali-date==0.3.1
 -e git+https://github.com/AhmadiEhsan/django-suit-RTL@b171e6757c9d90688e1f7b08a31fb95aa87ad6c1#egg=django_suit
 django-widget-tweaks==1.4.8
