--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.10
+astroid==2.4.2
 autopep8==1.5.4
 backcall==0.2.0
 colorama==0.4.3
@@ -11,13 +12,17 @@ django-gravatar2==1.4.4
 django-jalali-date==0.3.1
 -e git+https://github.com/AhmadiEhsan/django-suit-RTL@b171e6757c9d90688e1f7b08a31fb95aa87ad6c1#egg=django_suit
 django-widget-tweaks==1.4.8
+djangorestframework==3.11.1
 ipykernel==5.3.4
 ipython==7.17.0
 ipython-genutils==0.2.0
+isort==4.3.21
 jdatetime==3.6.2
 jedi==0.17.2
 jupyter-client==6.1.6
 jupyter-core==4.6.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -28,9 +33,13 @@ ptyprocess==0.6.0
 pycodestyle==2.6.0
 pydotplus==2.0.2
 Pygments==2.6.1
+pylint==2.5.3
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+pywin32==228
 pyzmq==19.0.2
 r-django-jet==2.0.8
 six==1.15.0
@@ -39,3 +48,4 @@ toml==0.10.1
 tornado==6.0.4
 traitlets==4.3.3
 wcwidth==0.2.5
+wrapt==1.12.1
