--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ decorator==4.4.2
 Django==3.0.8
 django-3-jet==1.0.7
 django-crispy-forms==1.9.2
+django-email-verification==0.0.7
 django-extensions==3.0.4
 django-gravatar2==1.4.4
 django-jalali-date==0.3.1
