--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-gravatar2==1.4.4
 django-jalali-date==0.3.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.11.1
+djangorestframework-simplejwt==4.4.0
 ipykernel==5.3.4
 ipython==7.17.0
 ipython-genutils==0.2.0
@@ -32,6 +33,7 @@ ptyprocess==0.6.0
 pycodestyle==2.6.0
 pydotplus==2.0.2
 Pygments==2.6.1
+PyJWT==1.7.1
 pylint==2.5.3
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
